--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+
+[profile.dev.package.sqlx-macros]
+opt-level = 3
