--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,9 +28,11 @@ sqlx = { version = "0.7", features = [
   "chrono",
 ] }
 rand = "0.8"
+redis = { version = "0.25.3", features = ["tokio-comp"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
+tokio = { version = "1.37.0", features = ["macros"] }
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
