chore: env example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DATABASE_URL=postgresql://localhost/splitwizz
 
+REDIS_URI=redis://127.0.0.1
+
 WEB_URI=http://localhost:3000
 SELF_URI=http://localhost:9000
 CLIENT_ID=google_client_id
