--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,8 +29,7 @@ sqlx = { version = "0.7", features = [
 ] }
 rand = "0.8"
 redis = { version = "0.25.3", features = ["tokio-comp", "r2d2"] }
-r2d2 = "0.8.10"
-# bb8-redis = "0.15.0"
+bb8-redis = "0.15.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 uuid = { version = "0.8", features = ["serde", "v4"] }
