feat: adding refresh tokens

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ google-jwt-verify = { git = "https://github.com/moliva/google-jwt-verify", branc
   "async",
 ] }
 http = "0.2"
+jsonwebtoken = "9.3"
 openssl = { version = "0.10", features = ["v110"] }
 sqlx = { version = "0.7", features = [
   "runtime-tokio-native-tls",
