feat: adding logout and refresh

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ SELF_URI=http://localhost:9000
 CLIENT_ID=google_client_id
 CLIENT_SECRET=google_client_secret
 
+# secrets
+JWT_SECRET=access-secret
+REFRESH_SECRET=refresh-secret
