--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ actix-http = "3.6"
 actix-service = "1.0"
 actix-web = { version = "4.5", features = ["openssl"] }
 actix-web-httpauth = "0.8"
+auth = { path = "../auth" }
 awc = { version = "3.4", features = ["openssl"] }
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
