--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 actix-cors = "0.7"
 actix-web = { version = "4.9", features = ["openssl"] }
-auth = { path = "../auth" }
+auth = { git = "https://github.com/moliva/auth.rs", branch = "main" }
 chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 env_logger = "0.11"
